CAMEL-22086 - Reinstate camel-milo as milo has reached 1.0.0
Signed-off-by: Andrea Cosentino <ancosen@gmail.com>

--- a/components/camel-milo/src/main/docs/milo-client-component.adoc
+++ b/components/camel-milo/src/main/docs/milo-client-component.adoc
@@ -5,6 +5,7 @@
 :description: Connect to OPC UA servers using the binary protocol for acquiring telemetry data.
 :since: 2.19
 :supportlevel: Stable
+:tabs-sync-option:
 :component-header: Both producer and consumer are supported
 //Manually maintained attributes
 :camel-spring-boot-name: milo
