--- a/components/camel-milo/src/main/docs/milo-browse-component.adoc
+++ b/components/camel-milo/src/main/docs/milo-browse-component.adoc
@@ -5,6 +5,7 @@
 :description: Connect to OPC UA servers using the binary protocol for browsing the node tree.
 :since: 3.15
 :supportlevel: Stable
+:tabs-sync-option:
 :component-header: Only producer is supported
 //Manually maintained attributes
 :camel-spring-boot-name: milo
